# extension-trait

./: .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: basic.rs
