[package]
name = "extension-trait"
version = "1.0.1"
edition = "2021"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/extension-trait"
license = "MIT OR Apache-2.0"
description = "Macro to declare extension traits"
documentation = "https://docs.rs/extension-trait"
keywords = ["no_std", "trait"]
categories = ["no-std", "rust-patterns"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
syn = { version = "2.0.3", features = ["full"] }
quote = "1.0.2"

[badges.maintenance]
status = "deprecated"
